# simple-docker-manager

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-build.sh  docker-compose.yml  env.example  justfile
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: container-security.yml  dependency-security.yml  release.yml  security.yml  test.yml
src/: auth.rs  config.rs  docker.rs  lib.rs  main.rs  models.rs  web.rs
static/: dashboard.js  styles.css
templates/: dashboard.html  login.html  logs.html  management.html
tests/: integration_test.rs
