[package]
name = "simple-docker-manager"
version = "1.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_docker_manager"
path = "src/lib.rs"

[[bin]]
name = "simple-docker-manager"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "form", "query", "macros"] }
bollard = "0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
html-escape = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
envy = "0.4"
dotenvy = "0.15"
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
# Authentication dependencies
argon2 = "0.5"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"

# Security: Force newer versions to address vulnerabilities
bytes = "1.11.1"  # RUSTSEC-2026-0007: Integer overflow fix
time = "0.3.47"   # RUSTSEC-2026-0009: DoS via stack exhaustion fix 